--- a/js/components/css/root.css
+++ b/js/components/css/root.css
@@ -1,9 +1,54 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .root {
-    margin: 2rem;
-    margin-top: 1rem;
-    font-family: monospace;
+  margin: 2rem;
+  margin-top: 1rem;
+  font-family: monospace;
+}
+
+button {
+  width: 6em;
+}
+
+button.active {
+  font-weight: bold;
+}
+
+button.highlighted {
+  box-shadow: inset 0px 0px 5px 0px greenyellow;
+}
+
+
+.bar {
+  margin-bottom: 5px;
+  font-family: monospace;
+  overflow: hidden;
+  height: 20px;
+}
+
+.bar-title {
+  width: 4em;
+  float: left;
+  height: 20px;
+}
+
+.bar-bar {
+  background: deepskyblue;
+  float: left;
+  height: 20px;
+  position: relative;
+}
+
+.bar-bar-title {
+  position: absolute;
+  line-height: 20px;
+  height: 20px;
+  color: #ccc;
+  white-space: nowrap;
+}
+
+.bar-bar.highlighted {
+  background: greenyellow;
 }
