--- a/src/bar.css
+++ b/src/bar.css
@@ -1,31 +1,54 @@
+.wrap {
+  vertical-align: bottom;
+  width: 100%;
+  height: 300px;
+  white-space: nowrap;
+  padding: 50px 8px;
+  position: relative;
+  border-radius: 2px;
+  border: 1px solid #cccccc;
+  margin-bottom: 16px;
+}
+
 .bar {
-  margin-bottom: 5px;
-  font-family: monospace;
-  overflow: hidden;
-  height: 20px;
-}
-
-.bar-title {
-  width: 4em;
-  float: left;
-  height: 20px;
-}
-
-.bar-bar {
+  display: inline-block;
   background: deepskyblue;
-  float: left;
-  height: 20px;
+  border-radius: 4px 4px 2px 2px;
   position: relative;
 }
 
-.bar-bar-title {
+.bar:before {
+  content: attr(data-info);
   position: absolute;
-  line-height: 20px;
-  height: 20px;
-  color: #ccc;
-  white-space: nowrap;
+  top: -1.2rem;
+  width: 100%;
+  text-align: center;
+  color: #999;
+  font-size: .8rem;
+  font-family: Verdana, sans-serif;
 }
 
-.bar-bar.highlighted {
-  background: greenyellow;
+.bar:after {
+  content: attr(data-title);
+  position: absolute;
+  bottom: -1.2rem;
+  width: 100%;
+  text-align: center;
+  color: #999;
+  font-size: .8rem;
+  font-family: Verdana, sans-serif;
+}
+
+.title {
+  position: absolute;
+  top: 8px;
+  left: 10px;
+}
+
+.highlighted {
+  background: dodgerblue;
+}
+
+.virtual {
+  background: cornflowerblue;
 }
