--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,6 @@
 .wrap {
   position: relative;
+  margin-bottom: 16px;
 }
 
 .input {
@@ -8,13 +9,13 @@
   line-height: 32px;
   padding: 0 10px;
   box-sizing: border-box;
-  font-family: 'Arial';
   border: 1px solid #ccc;
+  border-radius: 2px;
 }
 
 .input:focus {
   outline: none;
-  border-color: black;
+  border-color: #999;
 }
 
 .name {
@@ -25,5 +26,4 @@
   line-height: 32px;
   font-size: 16px;
   color: #999;
-  font-family: monospace;
 }
