--- a/src/root.css
+++ b/src/root.css
@@ -4,19 +4,17 @@
   box-sizing: border-box;
 }
 
-.wrap {
-  margin: 16px;
-  padding-top: 100px;
+a {
+  text-decoration: none;
+  color: darkslateblue;
 }
 
-.sticky {
+.wrap {
+  margin: 16px;
+  /*padding-top: 100px;*/
+}
+
+.aside {
   position: fixed;
-  width: 100%;
-  top: 0;
-  background: white;
-  z-index: 100;
-  border-bottom: 1px solid #eee;
-  padding: 16px 16px 0 16px;
-  margin: 0 -16px 0 -16px;
-  box-sizing: border-box;
+  top: 16px;
 }
