--- a/src/graph-step.css
+++ b/src/graph-step.css
@@ -1,4 +1,9 @@
+.wrap {
+  margin-left: -10px;
+  margin-right: -3px;
+}
+
 .slider {
-  width: 200px;
-  margin: 0 0 10px 0;
+  width: 100%;
+  margin-left: -1px;
 }
