--- a/src/input.css
+++ b/src/input.css
@@ -1,10 +1,11 @@
 .input {
-  width: 200px;
+  width: 100%;
   font-size: 20px;
   line-height: 35px;
-  padding: 0 8px;
-  border: 1px solid #ccc;
+  padding-left: 8px;
+  border: 1px solid #ddd;
   border-radius: 2px;
+  margin-left: -10px;
 }
 
 .input:focus {
