--- a/src/input.css
+++ b/src/input.css
@@ -1,20 +1,15 @@
 .input {
   width: 100%;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 35px;
   padding-left: 8px;
   border: 1px solid #ddd;
   border-radius: 2px;
   margin-left: -10px;
+  /*font-weight: 200;*/
 }
 
 .input:focus {
   outline: none;
   border-color: #999;
-}
-
-.name {
-  line-height: 32px;
-  font-size: 16px;
-  color: #999;
 }
