--- a/src/input.css
+++ b/src/input.css
@@ -1,15 +1,26 @@
+.wrap {
+  position: relative;
+}
+
 .input {
   width: 100%;
   font-size: 18px;
   line-height: 35px;
-  padding-left: 8px;
+  padding-left: 11px;
   border: 1px solid #ddd;
   border-radius: 2px;
   margin-left: -10px;
-  /*font-weight: 200;*/
 }
 
 .input:focus {
   outline: none;
   border-color: #999;
+}
+
+.clear {
+  cursor: default;
+  font-size: 18px;
+  position: absolute;
+  right: 21px;
+  top: 8px;
 }
